--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -28,9 +28,12 @@ twitter_username: isurudevj
 github_username:  isurudevj
 
 # Build settings
-theme: jekyll-theme-hacker
+theme: minima
 plugins:
   - jekyll-feed
+
+header_pages:
+  - k8s.md
 
 # Exclude from processing.
 # The following items will not be processed, by default.
