--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: fun.sh
+title: Isuru's Blog
 email: isurudevj@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   This is about what I do for fun.
