--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -32,6 +32,7 @@ plugins:
 
 header_pages:
   - performance-engineering.md
+  - scratch.md
 
 # Exclude from processing.
 # The following items will not be processed, by default.
