--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -33,6 +33,7 @@ plugins:
 header_pages:
   - performance-engineering.md
   - scratch.md
+  - tools-belt.md
 
 # Exclude from processing.
 # The following items will not be processed, by default.
