--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -34,6 +34,7 @@ header_pages:
   - performance-engineering.md
   - scratch.md
   - tools-belt.md
+  - kdb-q.md
 
 # Exclude from processing.
 # The following items will not be processed, by default.
