--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -23,7 +23,7 @@ email: isurudevj@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   This is about what I do for fun.
 twitter_username: isurudevj
-github_username:  isurudevj
+github_username:  busy-spin
 
 # Build settings
 theme: minima
